makes the titleNode height calculated (fixing children height properly) and adds better styling to the titleNode also fixes weird safari overflow thinger.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@12408 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/layout/resources/ExpandoPane.css
+++ b/layout/resources/ExpandoPane.css
@@ -1,44 +1,48 @@
 .dojoxExpandoPane {
-			margin-top:1px;
-			border-top:1px solid #ccc;
-			z-index:440;
-			background:#fff;
-		}
-		.dojoxExpandoPane .dojoxExpandoWrapper {
-			overflow:hidden;
-		}
-		.dojoxExpandoIcon {
-			background:url('../../../dijit/themes/soria/images/spriteRoundedIconsSmall.png') no-repeat center center;
-			width:14px;
-			height:14px;
-		}
-		.dojoxExpandoOpen .dojoxExpandoIcon {
-			background-position:-60px 0px;
-		}
-		.dojoxExpandoClosed .dojoxExpandoTitleNode {
-			visibility:hidden;
-		}
-		.dojoxExpandoTitleNode {
-			padding-right:6px; padding-left:6px;
-		}
-		.dojoxExpandoClosed .dijitContentPane {
-			overflow:hidden;
-		}
-		.dojoxExpandoIcon .a11yNode {
-			display:none;
-			visibility:hidden;
-		}
-		.dojoxExpandoPane .iconRight .dojoxExpandoIcon {
-			float:right;
-		}
-		.dojoxExpandoPane .iconLeft .dojoxExpandoIcon {
-			float:left;
-		}
-		.nihilo .dojoxExpandoTitle {
-			height:16px;
-			font-size:0.9em;
-			background:#fafafa;
-			padding:3px;
-			padding-top:7px;
-			padding-bottom:4px;
-		}
+	overflow:hidden;
+	margin-top:1px;
+	border-top:1px solid #ccc;
+	z-index:440;
+	background:#fff;
+}
+.dojoxExpandoPane .dojoxExpandoWrapper {
+	overflow:hidden;
+}
+.dojoxExpandoIcon {
+	background:url('../../../dijit/themes/soria/images/spriteRoundedIconsSmall.png') no-repeat center center;
+	width:14px;
+	cursor:pointer;
+	background-position:-60px 0px;
+	height:14px;
+}
+.dojoxExpandoClosed .dojoxExpandoIcon {
+	background-position:0px 0px;
+}
+.dojoxExpandoClosed .dojoxExpandoTitleNode {
+	visibility:hidden;
+}
+.dojoxExpandoTitleNode {
+	padding-right:6px; padding-left:6px;
+}
+.dojoxExpandoClosed .dijitContentPane {
+	overflow:hidden;
+}
+.dojoxExpandoIcon .a11yNode {
+	display:none;
+	visibility:hidden;
+}
+.dojoxExpandoPane .iconRight .dojoxExpandoIcon {
+	float:right;
+}
+.dojoxExpandoPane .iconLeft .dojoxExpandoIcon {
+	float:left;
+}
+.nihilo .dojoxExpandoTitle {
+	height:16px;
+	font-size:0.9em;
+	background:#fafafa;
+	padding:3px;
+	padding-top:7px;
+	padding-bottom:7px;
+	background:url("../../../dijit/themes/nihilo/images/tabStripe.gif") repeat-x left bottom; 
+}
